<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
    <EditText
            android:id="@+id/first_input_box"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/default_message_enter_input_box"
    />
    <EditText
            android:id="@+id/second_input_box"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/default_message_enter_input_box"
    />
    <RadioGroup
            android:id="@+id/operations_buttons"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
    >
        <RadioButton
                android:id="@+id/addition_button"
                android:text="@string/addition_field"
                android:layout_width="match_parent"
                android:layout_height="30dp"
        />
        <RadioButton
                android:id="@+id/multiplication_button"
                android:text="@string/multiplication_field"
                android:layout_width="match_parent"
                android:layout_height="30dp"
        />
        <RadioButton
                android:id="@+id/subtraction_button"
                android:text="@string/subtraction_field"
                android:layout_width="match_parent"
                android:layout_height="30dp"
        />
        <RadioButton
                android:id="@+id/division_button"
                android:text="@string/division_field"
                android:layout_width="match_parent"
                android:layout_height="30dp"
        />
    </RadioGroup>
    <TextView
            android:id="@+id/result_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_box_message"
            android:layout_gravity="center_horizontal"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_margin="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
    >
        <Button
                android:id="@+id/raz_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/raz"
        />
        <Button
                android:id="@+id/equal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/equal"
                android:onClick="compute"
        />
        <Button
                android:id="@+id/quit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/quit"
        />
    </LinearLayout>
    <TextView
            android:id="@+id/copyright_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_message"
            android:gravity="bottom"
            android:layout_gravity="center_horizontal"
    />


</LinearLayout>